--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Dov Cattan</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/Dov-Cattan.jpeg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -38,7 +38,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/1686311819196.jpg" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/img/Dov-Cattan.jpeg" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Dov Cattan</h1>
                 <!-- Icon Divider-->
@@ -70,7 +70,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                  
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/1655306371063.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/Capture3.PNG" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -115,7 +115,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/Capture1.PNG" alt="..." />
                         </div>
                     </div>
                 </div>
