--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+                        <!--<li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="resume.html">Resume</a></li>
+                        -->
+
                     </ul>
                 </div>
             </div>
@@ -44,7 +46,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-circle"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
@@ -153,6 +155,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/dov-cattan/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Dov-Cattan"><i class="fab fa-fw fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/2K0Games"><i class="fab fa-fw fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://mpcrlab.com/people/Dov-Cattan/"></a>
                     </div>
                     
                 </div>
@@ -160,8 +163,8 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Dov Cattan Porfolio Hosted On Github Pages</small></div>
-            <div class="container"><p>Email: dovcattan10@outlook.com</p></div>
+            <div class="container"><small>Copyright &copy; Made by Dov Cattan</small></div>
+            <div class="container"><p>You can contact me via email at: dovcattan10@outlook.com</p></div>
         </div>
        
         <!-- Bootstrap core JS-->
