--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">Dov Cattan is a Computer Engineer at FAU who is talented and creative individual looking to design and program the next big wave. Broad experience in designing games in both coding, creating the environment and all other aspects. Designs Circuit Boards, FPGA components, Embedded Software, and Wiring Diagrams. Self-motivated, independent, detailed oriented team player. Modifies and enhances existing software and hardware. Loves to fix the bugs</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">Latest Work Experience: Spent this past summer as an Electrical Engineering Intern at Motorola Solutions, and now currently doing currently research with Field Programmable Gate Arrrays(FPGAs) and One Instruction Set Computing(OISC) with the Machine Perception Cognitive Robotics(MPCR) Laboratory at Florida Atlantic University</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">Latest Work Experience: Spent this past summer as an Electrical Engineering Intern at Motorola Solutions, and now currently doing currently research with Field Programmable Gate Arrays (FPGAs) and One Instruction Set Computing (OISC) with the Machine Perception Cognitive Robotics (MPCR) Laboratory at Florida Atlantic University</p></div>
                 </div>
                
             </div>
