--- a/index.html
+++ b/index.html
@@ -457,14 +457,14 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/Game.png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/game.png" class="img-fluid" alt="">
                <p><br>Sky Ball Cube Collector: Level 5.<br><a href="https://2k0games.itch.io/sky-ball">Link To Play The Game Here!</a></p>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/Robot.png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/Robot.PNG" class="img-fluid" alt="">
                <p><br>Multirobot Navigation Using RRT Algortihm to autonomously explore an area in ROS, RVIZ, and Gazebo. <br>
                  Blue represents areas that the robot has explored (global trees), red represents areas that the robot is currently exploring (local trees). <br>
                 All robots that are being simulated in this environment are the Turtlebot 3 Model.</p>
