--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
           
 
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4 isotope-container" data-aos="fade-up" >
 
             
 
