--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Dov Cattan</h2>
-        <p>I'm a <span class="typed" data-typed-items="Computer Engineer, Electronics Engineer, PCB Designer, Embedded Engineer, Game Designer">Computer Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-      </div>
+       <!-- /home Section  <p>I'm a <span class="typed" data-typed-items="Computer Engineer, Electronics Engineer, PCB Designer, Embedded Engineer, Game Designer">Computer Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+      --></div>
 
     </section><!-- /home Section -->
 
