--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <p><br>Completed Environmental Control System inside the Styrofoam payload box</p>
               </div>
             </div><!-- End Portfolio Item -->
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item>
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/axa-3.jpg" class="img-fluid" alt="">
                 <p><br>High-Altitude Balloon with GMO Tobacco Plant Payload launched at its peak (100,000 feet).</p>
