--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
           
 
-          <div class="row gy-3 isotope-container" data-aos="fade-up" >
+          <div class="isotope-container" data-aos="fade-up" >
 
             
 
