--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
       <div class="container" data-aos="fade-up">
         <h2>Dov Cattan</h2>
-        /home Section  <p>I'm a <span class="typed" data-typed-items="Computer Engineer, Electronics Engineer, PCB Designer, Embedded Engineer, Game Designer">Computer Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-      /div>
+      <p> I'm a <span class="typed" data-typed-items="Computer Engineer, Electronics Engineer, PCB Designer, Embedded Engineer, Game Designer">Computer Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+      </div>
 
     </section><!-- /home Section -->
 
