--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <div class="isotope-container" data-aos="fade-up" >
 
             
-            <div class="col-md-6 col-lg-4 mb-5">
+            <div class="col-md-6 col-lg-4">
             
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/motorola-3.JPG" class="img-fluid" alt="">
