--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <li><a href="#Current Side Project">Current Side Project</a></li>
             <li><a href="#Work Experience">Work Experience</a></li>
             <li><a href="#Education">Education</a></li>
-            <li><a href="#Professional Club Experience">Professional Club Experience</a></li>
+            <li><a href="#Professional Clubs">Professional Clubs</a></li>
             <li><a href="#Notable School Projects">Notable School Projects</a></li>
-            <li><a href="#Undergraduate Research Experience">Undergraduate Research Experience</a></li>
+            <li><a href="#Undergraduate Research">Undergraduate Research</a></li>
             <li><a href="#Indie Game Developer">Indie Game Developer</a></li>
             </nav>
           </ul>
@@ -218,8 +218,8 @@
               <p>Relevant Coursework: Electronics 1 and Lab, 3D Modeling and Design, Robotic Applications, Engineering Math (With Python)</p>
             </div><!-- Edn Resume Item -->
 
-            <section id = "Professional Club Experience"></section>
-            <h3 class="Professional Club Experience">Professional Club Experience</h3> 
+            <section id = "Professional Clubs"></section>
+            <h3 class="Professional Clubs">Professional Clubs</h3> 
             <div class="resume-item">
               <h4>Electrical Team Member</h4>
               <h5>September 2021 - May 2024</h5>
@@ -274,8 +274,8 @@
            </div><!-- Edn Resume Item -->
         
     
-           <section id = "Undergraduate Research Experience"></section>
-            <h3 class="Undergraduate Research Experience">Undergraduate Research Experience</h3> 
+           <section id = "Undergraduate Research"></section>
+            <h3 class="Undergraduate Research">Undergraduate Research</h3> 
             <div class="resume-item">
               <h4>Center of Autonomy and Artificial Intelligence</h4>
               <h5>November 2021 - April 2022</h5>
