--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-PongPCB">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/Pong PCB.jpg" class="img-fluid" alt="">
-               <p><br>PCB that Plays Pong using an Arduino Nano and LCD Screen. <br> The four buttons allow two players to moves the puck against each other.</p>
+               <p><br>PCB that Plays Pong using an Arduino Nano and LCD Screen. <br> The four buttons allow two players to move the puck against each other.</p>
               </div>
             </div><!-- End Portfolio Item -->
 
