--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div><!-- Edn Resume Item -->
           
 
-       
+            <section id = "Notable School Projects"></section>
             <h3 class="Notable School Projects">Notable School Projects</h3> 
             <div class="resume-item">
               <h4>IR Car Speed Detector Project</h4>
