--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-owlsracing">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/owls-racing-3.JPG" class="img-fluid" alt="">
-                <p><br>Final schematic for the shifting PCB</p>
+                <p><br>Current Shifting PCB Schematic</p>
               </div>
             </div><!-- End Portfolio Item -->
 
