--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <h5>May 2021 - August 2021</h5>
               <p><em>Telit Cinterion, Boca Raton, FL</em></p>
               <ul>
-                <li>Simulated IOT Devices on Airplans and Geofences on a world map using the Telit cloud portal to show the Software Developers proficiency with JavaScript.</li>
+                <li>Simulated IOT Devices on Airplanes and Geofences on a world map using the Telit cloud portal to show the Software Developers proficiency with JavaScript.</li>
                 <li>Performed quality assurance automated testing on Telit's cloud server DeviceWise using JavaScript and Cucumber to test for faults.</li>
                 <li>Reported to the Development team whenever there was a bug on the site using Jira, and published the code with Gitlab.</li>
               </ul>
