--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
               <ul>
                 <li>Designed a 7th-order Elliptical Harmonic Filter to improve harmonic filtering for their 800-900 MHz Band Radios. Filter was created to meet the required 
                   insertion, return, and rejection loss specifications that were later handed off to Senior Engineers to continue toward completion.</li>
-                <li>Created programs with LabVIEW that were able to measure current and voltage from a multimeter using a state machine. Able to show that the program 
-                  interacts with electrical testing instruments on LabVIEW using drivers, Python, and SCIPI commands. </li>
+                <li>Created programs with LabVIEW to measure voltage from a multimeter and power supply using a state machine and showed that the program interacts with electrical testing instruments using SCIPI commands and Python nodes. </li>
                 <li>Built a Schematic and Printed Circuit Board using Cadence so Motorola can add GNSS capabilities on their Radios.</li>
                 <li>Gave a technical presentation of my accomplishments to senior management, the engineering team, and fellow interns.</li>
               </ul>
