--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
      
       <div class="container section-title" data-aos="fade-up">
         <h2>About Me</h2>
-        <p>I'm a talented and creative individual looking to integrate the next big wave. Broad experience in engineering electronics, firmware, and simulations. Designs Circuit Boards, Embedded Software, FPGA Logic, Video Games, and Wiring Diagrams. Self-motivated, independent, problem solver, and a detail-oriented team player. Modifies, enhances, and tests existing hardware and software. Loves to fix the bugs!</p>
+        <p>I'm a talented and creative individual looking to engineer, integrate and produce the next big wave. Broad experience in engineering electronics, firmware, manufacturing, and simulations. Designs Circuit Boards, Embedded Software, FPGA Logic, Video Games, and Wiring Diagrams. Self-motivated, independent, problem solver, and a detail-oriented team player. Modifies, enhances, and tests existing hardware and software. Loves to fix the bugs!</p>
       </div>
 
 
@@ -134,7 +134,7 @@
               <h5>May 2024 - Present</h5>
               
               <ul>
-                <li> Goal of the project is to show that data can be transferred from a transmitter to a receiver using RF and LoRa.</li>
+                <li>Goal of the project is to show that data can be transferred from a transmitter to a receiver using RF and LoRa.</li>
                 <li>Built the schematics for the transmitter and receiver on KiCAD.</li>
                 <li> Currently making the firmware in C++ to be programmed onto an Arduino for the Transmitter and ESP 32 for the Receiver. Software will be tested on 
                   breadboard designs based on the schematics.</li>
