--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="row">
           
        
-
+   <section id = "Skills"> </section>
              <h3 class="Skills">Skills</h3> 
               <li>Hardware: Agilent Oscilloscope, Agilent Function Generator, ESP 32, Arduino, Xilinx FPGA, Raspberry Pi.</li>
               <li>Software: KiCAD, LabVIEW, Cadence, ADS, Xilinx Vivado, SolidWorks, Delmia Apriso, SAP, Windchill, PSpice.</li>
