--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
        
    <section id = "Skills"> </section>
              <h3 class="Skills">Skills</h3> 
-              <li><b>Hardware:</b> Agilent Oscilloscope, Agilent Function Generator, ESP 32, Arduino, Xilinx FPGA, Raspberry Pi.</li>
-              <li><b>Software: </b> KiCAD, LabVIEW, Cadence, ADS, Xilinx Vivado, SolidWorks, Delmia Apriso, SAP, Windchill, PSpice.</li>
-              <li><b>Programming Languages: </b>Python, C, C++, C#, MATLAB, HTBasic, VHDL, Verilog.</li>
+              <li><strong>Hardware:</strong> Agilent Oscilloscope, Agilent Function Generator, ESP 32, Arduino, Xilinx FPGA, Raspberry Pi.</li>
+              <li><strong>Software: </strong> KiCAD, LabVIEW, Cadence, ADS, Xilinx Vivado, SolidWorks, Delmia Apriso, SAP, Windchill, PSpice.</li>
+              <li><strong>Programming Languages: </strong> Python, C, C++, C#, MATLAB, HTBasic, VHDL, Verilog.</li>
 
 
          <section id = "Current Side Project"> </section>
