--- a/index.html
+++ b/index.html
@@ -106,8 +106,12 @@
 
     </section><!-- /About Section -->
 
- 
-
+     <!-- Skills Section -->
+   <section id = "Skills"> </section>
+             <h3 class="Skills">Skills</h3> 
+              <li><strong>Hardware:</strong> Agilent Oscilloscope, Agilent Function Generator, ESP 32, Arduino, Xilinx FPGA, Raspberry Pi.</li>
+              <li><strong>Software: </strong> KiCAD, LabVIEW, Cadence, ADS, Xilinx Vivado, SolidWorks, Delmia Apriso, SAP, Windchill, PSpice.</li>
+              <li><strong>Programming Languages: </strong> Python, C, C++, C#, MATLAB, HTBasic, VHDL, Verilog.</li>
     <!-- Resume Section -->
     <section id="resume" class="resume section">
 
@@ -122,11 +126,7 @@
         <div class="row">
           
        
-   <section id = "Skills"> </section>
-             <h3 class="Skills">Skills</h3> 
-              <li><strong>Hardware:</strong> Agilent Oscilloscope, Agilent Function Generator, ESP 32, Arduino, Xilinx FPGA, Raspberry Pi.</li>
-              <li><strong>Software: </strong> KiCAD, LabVIEW, Cadence, ADS, Xilinx Vivado, SolidWorks, Delmia Apriso, SAP, Windchill, PSpice.</li>
-              <li><strong>Programming Languages: </strong> Python, C, C++, C#, MATLAB, HTBasic, VHDL, Verilog.</li>
+
 
 
          <section id = "Current Side Project"> </section>
