--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
     
 
      <!-- Skills Section -->
-   <section id = "Skills"> </section>
-             <h3 class="Skills">Skills</h3> 
+             <h3>Skills</h3> 
               <li><strong>Hardware:</strong> Agilent Oscilloscope, Agilent Function Generator, ESP 32, Arduino, Xilinx FPGA, Raspberry Pi.</li>
               <li><strong>Software: </strong> KiCAD, LabVIEW, Cadence, ADS, Xilinx Vivado, SolidWorks, Delmia Apriso, SAP, Windchill, PSpice.</li>
               <li><strong>Programming Languages: </strong> Python, C, C++, C#, MATLAB, HTBasic, VHDL, Verilog.</li>
