--- a/index.html
+++ b/index.html
@@ -101,14 +101,15 @@
         <h2>About Me</h2>
         <p>I'm a talented and creative individual looking to engineer, integrate and produce the next big wave. Broad experience in engineering electronics, firmware, manufacturing, and simulations. Designs Circuit Boards, Embedded Software, FPGA Logic, Video Games, and Wiring Diagrams. Self-motivated, independent, problem solver, and a detail-oriented team player. Modifies, enhances, and tests existing hardware and software. Loves to fix the bugs! <br></p>
     
-
+      </div>
      <!-- Skills Section -->
-             <h3><br>Skills</h3> 
+       <div class="container section-title" data-aos="fade-up"></div>
+             <h3>Skills</h3> 
 
               <li><strong>Hardware:</strong> Agilent Oscilloscope, Agilent Function Generator, ESP 32, Arduino, Xilinx FPGA, Raspberry Pi.</li>
               <li><strong>Software: </strong> KiCAD, LabVIEW, Cadence, ADS, Xilinx Vivado, SolidWorks, Delmia Apriso, SAP, Windchill, PSpice.</li>
               <li><strong>Programming Languages: </strong> Python, C, C++, C#, MATLAB, HTBasic, VHDL, Verilog.</li>
-  </div>
+          </div>
 
     </section><!-- /About Section -->
 
