--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     
       </div>
      <!-- Skills Section -->
-       <div class="container section-title" data-aos="fade-up"></div>
+       <div class="container section-title" data-aos="fade-up">
              <h3>Skills</h3> 
 
               <li><strong>Hardware:</strong> Agilent Oscilloscope, Agilent Function Generator, ESP 32, Arduino, Xilinx FPGA, Raspberry Pi.</li>
